<resources>
    <string name="app_name">Zap_clone</string>
    <string name="teste">Fortune plango vulnera Stillantibus ocellis - llantibus ocellis Quod sua michi munera Subtrahit rebellis - trahit rebellis</string>
    <string name="conversar">Conversar</string>
    <string name="status">Status</string>
    <string name="chamadas">Chamadas</string>

    <string name="meu_status">Meu status</string>
    <string name="adicioanr_status">Toque para atualziar seu status</string>
    <string name="outros_status">"Atualizações recentes</string>
    <string name="sem_resultado">Nenhuma atividade recente</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="or">Ou</string>
    <string name="does_not_have_account">Não tenho uma conta \n Quero me <b>cadastrar agora!</b></string>
    <string name="email_register">Insira seu email</string>
    <string name="password_register">Criar senha</string>
    <string name="password_rept">Confirmar senha</string>
    <string name="register">Cadastrar</string>
    <string name="email_error">Email inválido</string>
    <string name="password_error">A senha deve conter ao menos 6 digitos</string>
    <string name="repassword_error">As senhas devem ser as mesmas</string>
    <string name="sucess_register">Usuario cadastrado com sucesso :D</string>
    <string name="failure_message">Não foi possível cadastrar usuario, tente novamente mais tarde</string>

    <string name="welcome_to_zap"><b>BEM-VINDO!!\n Esse aplicativo é um clone do whatsApp, apenas para fins de estudos.</b>\nObrigado por me baixar e me testar :D</string>
    <string name="name_register">Nos diga seu nome</string>
    <string name="continuar">Continuar</string>
    <string name="welcome_user">Bem vindo %1$s</string>
    <string name="not_null">Esse campo não pode ser vazio</string>
    <string name="login_error">Email ou senha inválidos</string>
    <string name="contentDescription_main_menu">Mais opções</string>
    <string name="new_group">Novo grupo</string>
    <string name="settings">Configurações</string>
    <string name="new_transmission">Nova transmissão</string>
    <string name="menu_main_deviceConnected">Aperelhos conectados</string>
    <string name="menu_main_favMessages">Mensagens favoritas</string>
    <string name="menu_main_findCompanies">Encontrar empresas</string>
    <string name="menu_main_payments">Pagamentos</string>
    <string name="new_contact">Novo contato</string>
    <string name="find_companies">Encontrar empresas</string>
</resources>