<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/status_perfil_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="1.5dp"
        app:civ_circle_background_color="@color/green"
        app:layout_constraintBottom_toBottomOf="@id/status_perfil_img"
        app:layout_constraintEnd_toEndOf="@id/status_perfil_img"
        tools:src="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/status_meuStatus_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/meu_status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/status_perfil_img"
        app:layout_constraintTop_toTopOf="@id/status_perfil_img" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/adicioanr_status"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/status_meuStatus_txt"
        app:layout_constraintTop_toBottomOf="@id/status_meuStatus_txt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/outros_status"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/status_perfil_img"
        app:layout_constraintTop_toBottomOf="@id/status_perfil_img" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/sem_resultado"
        android:textStyle="bold"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>