<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.login.LoginActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/whatsapp_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_email"
                style="@style/Theme.Zap_clone.FormInputLayout"
                android:layout_marginTop="40dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edt_email"
                    style="@style/Theme.Zap_clone.FormEditText"
                    android:background="@drawable/edit_text_form"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_password"
                style="@style/Theme.Zap_clone.FormInputLayout"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edt_password"
                    style="@style/Theme.Zap_clone.FormEditText"
                    android:background="@drawable/edit_text_form"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.zap_clone.util.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/green_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/green_dark"
                    android:padding="8dp"
                    android:background="@color/white"
                    android:text="@string/or" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green_light"
        app:layout_constraintBottom_toTopOf="@+id/login_txt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_txt_register"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:padding="24dp"
        android:text="@string/does_not_have_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>