<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/whatsapp_logo"
                android:layout_margin="24sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_name"
                style="@style/Theme.Zap_clone.FormInputLayout"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edt_name"
                    style="@style/Theme.Zap_clone.FormEditText"
                    android:background="@drawable/edit_text_form"
                    android:hint="@string/name_register"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_zap"
                android:textAlignment="center"
                android:paddingTop="24dp"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                app:layout_constraintTop_toBottomOf="@id/register_input_name"/>

            <com.example.zap_clone.util.LoadingButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_light"
                app:text="@string/continuar"
                android:layout_marginTop="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>