<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_newGroup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            android:textStyle="bold"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/img_newGroup"
            app:layout_constraintStart_toEndOf="@id/img_newGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_newGroup"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_newContact"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/img_newGroup"
            app:layout_constraintStart_toStartOf="@id/img_newGroup"
            app:layout_constraintBottom_toTopOf="@id/txt_findCompanies"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_contact"
            android:textStyle="bold"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/img_newContact"
            app:layout_constraintStart_toEndOf="@id/img_newContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_newContact"/>

        <TextView
            android:id="@+id/txt_findCompanies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_companies"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/img_newContact"
            app:layout_constraintStart_toStartOf="@id/img_newContact"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_findCompanies"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>